# text-classifier

./: pyproject.toml  read.md  text_classifier.ipynb
