[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["MsDiala <diala-is-diala@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
seaborn = "^0.11.0"
nltk = "^3.5"
jupyter = "^1.0.0"
lab = "^6.2"
Keras = "^2.4.3"
Unidecode = "^1.1.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
